--- a/pom.xml
+++ b/pom.xml
@@ -110,18 +110,22 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>start-spring-boot</id>
-                        <phase>pre-integration-test</phase>
+                        <id>pre-integration-test</id>
                         <goals>
                             <goal>start</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skip.integration.tests}</skip>
+                        </configuration>
                     </execution>
                     <execution>
-                        <id>stop-spring-boot</id>
-                        <phase>post-integration-test</phase>
+                        <id>post-integration-test</id>
                         <goals>
                             <goal>stop</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skip.integration.tests}</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -236,7 +240,7 @@
             <id>integration-test</id>
             <properties>
                 <build.profile.id>integration-test</build.profile.id>
-                <profileActive>test</profileActive>
+                <profileActive>integration-test</profileActive>
 
                 <skip.integration.tests>false</skip.integration.tests>
                 <skip.unit.tests>false</skip.unit.tests>
