--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
 
-      - name: Run MongoDB
+      - name: MongoDB Action
         uses: sukenda/mongodb-action@v1.0
         with:
           version: '4.2'
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Run Spring
+        run: mvn spring-boot:run -DskipTests -Plocal
 
       - name: Maven Verify
         run: mvn clean verify sonar:sonar
