--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.3.72</kotlin.version>
         <skip.integration.tests>false</skip.integration.tests>
+
+        <!-- Sonarcloud config -->
+        <sonar.projectKey>sukenda_spring-kotlin-restful</sonar.projectKey>
+        <sonar.organization>sukenda</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
