--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
           password: 'Pas@123'
           database: 'spring-kotlin-restful'
 
-#      - name: Run Sonarqube
-#        uses: sukenda/sonarqube-action@v1.0
+      - name: Run Sonarqube
+        uses: sukenda/sonarqube-action@v1.0
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
