--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           java-version: 1.8
 
       - name: Maven clean package
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
