--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.3.72</kotlin.version>
         <skip.integration.tests>false</skip.integration.tests>
-
+        <blockhound.version>1.0.4.RELEASE</blockhound.version>
         <!-- Sonarcloud config -->
         <sonar.projectKey>sukenda_spring-kotlin-restful</sonar.projectKey>
         <sonar.organization>sukenda</sonar.organization>
@@ -220,9 +220,10 @@
                 <build.profile.id>local</build.profile.id>
                 <profileActive>local</profileActive>
 
-                <skip.integration.tests>true</skip.integration.tests>
+                <skip.integration.tests>false</skip.integration.tests>
             </properties>
         </profile>
+
         <profile>
             <id>docker</id>
             <properties>
@@ -232,6 +233,7 @@
                 <skip.integration.tests>true</skip.integration.tests>
             </properties>
         </profile>
+
         <profile>
             <id>kubernetes</id>
             <properties>
@@ -241,6 +243,7 @@
                 <skip.integration.tests>true</skip.integration.tests>
             </properties>
         </profile>
+
         <profile>
             <id>integration-test</id>
             <properties>
