--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,18 @@ jobs:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: MongoDB Action
-        uses: sukenda/mongodb-action@v1.0
+        uses: sukenda/mongodb-action@v1.1
         with:
           version: '4.2'
+          port: 27017
           username: 'root'
           password: 'Pas@123'
-          initdb: 'spring-kotlin-restful'
-          initusername: 'spring-kotlin-user'
-          initpassword: 'spring-kotlin-pass'
+          init-db: 'spring-kotlin-restful'
+          initdb-username: 'spring-kotlin-user'
+          initdb-password: 'spring-kotlin-pass'
 
-#      - name: Run Sonarqube
-#        uses: sukenda/sonarqube-action@v1.0
+      #      - name: Run Sonarqube
+      #        uses: sukenda/sonarqube-action@v1.0
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
