--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,27 +17,22 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: MongoDB Action
-        uses: sukenda/mongodb-action@v1.2
-        with:
-          version: '4.2'
-          port: 27017
-          username: 'root'
-          password: 'Pas@123'
-          init-db: 'spring-kotlin-restful'
-          initdb-username: 'spring-kotlin-user'
-          initdb-password: 'spring-kotlin-pass'
+      - name: MongoDB using Docker Compose
+        run: docker-compose -f docker-compose.yml -f docker-compose/mongodb-compose.yaml up -d
 
-      #      - name: Run Sonarqube
-      #        uses: sukenda/sonarqube-action@v1.0
+      - name: Sonarqube using Docker Compose
+        run: docker-compose -f docker-compose.yml -f docker-compose/sonar-compose.yaml up -d
+
+      - name: Check RUN Docker Container
+        run: docker ps -a
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-      - name: Maven clean package
-        run: mvn clean install -Dsonar.skip=true
+      - name: Maven clean install
+        run: mvn clean install
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
