--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,12 @@ jobs:
           java-version: 1.8
 
       - name: Maven clean install
-        run: mvn clean install
+        run: mvn clean verify
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+      # This setup for sonarcloud
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
